--- a/dashboard/templates/dashboard/create_warehouse.html
+++ b/dashboard/templates/dashboard/create_warehouse.html
@@ -95,6 +95,7 @@
                                 -->
                                 {% if user.primary_role == 'super_admin' %}
                                     <a href="{% url 'warehouse_update' warehouse.id %}" class="btn btn-sm btn-outline-primary">Edit</a>
+                                    <a href="{% url 'warehouse_delete' warehouse.id %}" class="btn btn-sm btn-outline-danger ms-1" onclick="return confirm('Are you sure you want to delete this warehouse?');">Delete</a>
                                 {% endif %}
                             </td>
                         </tr>
